# arts-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arts.cfg
apps/: CMakeLists.txt
apps/CoMD/: CMakeLists.txt
apps/Stencil1D/: CMakeLists.txt
apps/arts/: CMakeLists.txt
apps/basicIO/ocr/: CMakeLists.txt
apps/cholesky/: CMakeLists.txt
apps/cholesky/ocr/: CMakeLists.txt
apps/cholesky/ocr-mkl/: CMakeLists.txt
apps/fft/ocr/: CMakeLists.txt
apps/fibonacci/ocr/: CMakeLists.txt
apps/npb-cg/sdsc-ocr/: CMakeLists.txt
apps/ocr/: CMakeLists.txt
apps/p2p/: CMakeLists.txt
apps/quicksort/ocr/: CMakeLists.txt
apps/sar/datagen-huge/: Makefile
apps/sar/ocr/: CMakeLists.txt
apps/sequential/: CMakeLists.txt
apps/sequential/lulesh-2.0.3/: CMakeLists.txt  lulesh.c  lulesh.h  lulesh_computation.c
apps/skel/ocr/: CMakeLists.txt
apps/smithwaterman/: CMakeLists.txt
apps/smithwaterman/ocr/: CMakeLists.txt  smithwaterman.c
ocr/: CMakeLists.txt  INSTALL.make  README  ocr.dox
ocr-apps/: CMakeLists.txt
ocr-apps/CoMD/: CMakeLists.txt
ocr-apps/Stencil2D/: CMakeLists.txt
ocr-apps/basicIO/ocr/: CMakeLists.txt
ocr-apps/cholesky/: CMakeLists.txt
ocr-apps/cholesky/ocr/: CMakeLists.txt
ocr-apps/cholesky/ocr-mkl/: CMakeLists.txt  ocr_mkl_cholesky.c
ocr-apps/fft/ocr/: CMakeLists.txt
ocr-apps/fibonacci/ocr/: CMakeLists.txt
ocr-apps/hpgmg/: CMakeLists.txt
ocr-apps/npb-cg/: CMakeLists.txt
ocr-apps/npb-cg/sdsc-ocr/: CMakeLists.txt
ocr-apps/quicksort/ocr/: CMakeLists.txt
ocr-apps/sar/: CMakeLists.txt
ocr-apps/sar/ocr/: CMakeLists.txt
ocr-apps/skel/ocr/: CMakeLists.txt
ocr-apps/smithwaterman/: CMakeLists.txt
ocr-apps/smithwaterman/ocr/: CMakeLists.txt
ocr/inc/: ocr-db.h  ocr-edt.h  ocr-errors.h  ocr-guid-functions.h  ocr-std.h  ocr-types.h  ocr-version.h  ocr.h
ocr/inc/extensions/: ocr-affinity.h  ocr-hints.h  ocr-labeling.h  ocr-legacy.h  ocr-pause.h  ocr-profiler-internal.h  ocr-profiler.h  ocr-runtime-itf.h
ocr/jenkins/: apps.ref  ocr_build.py  ocr_performance.py  ocr_regression.py  ocr_sub_all.py  tg.ref
ocr/jenkins/scripts/: init.sh  kernel-build.sh  perfStatCollector.sh  perfStatFileFolderParser.py  perfTestBaseval.py  performance-ubench.sh  regression.sh
ocr/machine-configs/tg-ce/: ce-default-lockable.cfg  ce-default.cfg  generate-cfg.sh
ocr/machine-configs/tg-x86/: jenkins-1block-lockableDB.cfg  jenkins-1block-regularDB.cfg  jenkins-2block-lockableDB.cfg  jenkins-2block-regularDB.cfg  mach-1block-labeled.cfg  mach-2block-labeled.cfg  mach-2block.cfg
ocr/machine-configs/tg-xe/: xe-default-lockable.cfg  xe-default.cfg
ocr/machine-configs/x86/: generate-cfg.sh
ocr/machine-configs/x86-gasnet/: generate-cfg.sh
ocr/machine-configs/x86-mpi/: generate-cfg.sh
ocr/machine-configs/x86-phi/: knl_mcdram.cfg
ocr/scripts/Analysis/: README
ocr/scripts/Blob/: aggregate_binary_files.sh
ocr/scripts/Configs/: ce_config_fix.py  combine-configs.py  config-generator.py  mem_config_fix.py  tg-fsim_config_fix.py
ocr/scripts/EdtStats/: README  edtStats.py
ocr/scripts/Nanny/: nanny.sh
ocr/scripts/PerformanceAnalysis/: ReadMe  collect.py  run
ocr/scripts/Profiler/: README  analyzeProfile.py  generateProfilerFile.py
ocr/scripts/StatsPass/: README
ocr/scripts/TraceUtils/: Makefile  README  traceDecode.c
ocr/scripts/xs-tools/: README  co_xstack  env.sh  jump_mpi_ws  jump_ws  jump_x86_ws  setup_git  xst.conf-sample
ocr/spec/: .gitignore  Makefile  bibdbase.bib  ocr-1.1.0.tex  ocr.sty
ocr/spec/Source/: ack.tex  app-A-examples.tex  app-B-api-extensions-new.tex  app-B-api-extensions-placeholder.tex  app-B-api-extensions.tex  app-B-hints.tex  app-B-labeledGUIDs.tex  app-B-new-events.tex  app-C-implementation-specific.tex  app-C-implementations.tex  app-D-history.tex  ch1-exec.tex  ch1-glossary.tex  ch1-intro.tex  ch1-main.tex  ch1-memory.tex  ch1-objects.tex  ch2-intro.tex  ch2-main.tex  ch2-main_orig.tex  ch2-ocr-API.tex  examples-db-acquire.tex  examples-db-ex.tex  examples-db-itw.tex  examples-finish.tex  examples-fork-join.tex  examples-hello.tex  examples-main.tex  examples-task-dep.tex  titlepage.tex
ocr/src/: arts-ocr.c  ocr_runtime.c
ocr/src/allocator/: allocator-all.c  allocator-all.h  files.txt
ocr/src/api/: ocr-db.c  ocr-edt.c  ocr-hint.c  ocr.c
ocr/src/comm-api/: comm-api-all.c  comm-api-all.h  files.txt
ocr/src/comm-platform/: comm-platform-all.c  comm-platform-all.h
ocr/src/comp-platform/: comp-platform-all.c  comp-platform-all.h
ocr/src/comp-target/: comp-target-all.c  comp-target-all.h
ocr/src/datablock/: datablock-all.c  datablock-all.h
ocr/src/driver/: ocr-driver.c  ocr-version.c
ocr/src/event/: event-all.h
ocr/src/experimental/: files.txt  ocr-placer.c  ocr-platform-model.c  ocrnewlib.c
ocr/src/guid/: files.txt  guid-all.c  guid-all.h
ocr/src/inc/: debug.h  ocr-allocator.h  ocr-comm-api.h  ocr-comm-platform.h  ocr-comp-platform.h  ocr-comp-target.h  ocr-datablock.h  ocr-event.h  ocr-guid-end.h  ocr-guid-kind.h  ocr-guid.h  ocr-mem-platform.h  ocr-mem-target.h  ocr-policy-domain-tasks.h  ocr-policy-domain.h  ocr-policy-msg-list.h  ocr-runtime-hints.h  ocr-runtime-types.h  ocr-sal.h  ocr-scheduler-heuristic.h  ocr-scheduler-object.h  ocr-scheduler.h  ocr-statistics-callbacks.h  ocr-statistics.h  ocr-sysboot.h  ocr-task.h  ocr-worker.h  ocr-workpile.h
ocr/src/machine-description/: ocr-machine-description.c  ocr-machine.h
ocr/src/mem-platform/: files.txt  mem-platform-all.c  mem-platform-all.h
ocr/src/mem-target/: mem-target-all.c  mem-target-all.h
ocr/src/policy-domain/: policy-domain-all.c  policy-domain-all.h  policy-domain-tasks.c
ocr/src/sal/: files.txt  sal-common.c
ocr/src/scheduler-heuristic/: files.txt  scheduler-heuristic-all.c  scheduler-heuristic-all.h
ocr/src/scheduler-object/: files.txt  scheduler-object-all.c  (+1 more)
ocr/tests/: README  ocrTests  unstable.default  unstable.distributed  unstable.tg-x86-lockableDB  unstable.tg-x86-regularDB  unstable.x86-gasnet-lockableDB  unstable.x86-lockableDB  unstable.x86-regularDB
src/: CMakeLists.txt  arts-ocr.c
(+483 files in other folders)
