if(NOT TARGET ocr)
	message(STATUS "Skipping OCR benchmark apps: ocr runtime target not found")
	return()
endif()

find_package(Threads REQUIRED)
find_library(OCR_MATH_LIB m)

set(CRLIBM_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/libs/src/crlibm-1.0beta4/x86/lib/libcrlibm.a")
set(CRLIBM_HEADER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libs/src/crlibm-1.0beta4/x86/include")
add_subdirectory(libs/src/crlibm-1.0beta4)
add_subdirectory(libs/src/reduction)

add_subdirectory(basicIO)
add_subdirectory(cholesky)
add_subdirectory(CoMD)
add_subdirectory(fft)
add_subdirectory(fibonacci)
add_subdirectory(globalsum)
add_subdirectory(hpcg)
add_subdirectory(hpgmg)
add_subdirectory(npb-cg)
add_subdirectory(p2p)
add_subdirectory(quicksort)
add_subdirectory(reduction)
add_subdirectory(sar)
add_subdirectory(skel)
add_subdirectory(smithwaterman)
add_subdirectory(Stencil1D)
add_subdirectory(Stencil2D)
add_subdirectory(triangle)
add_subdirectory(XSBench)
